# test_hello_gemini

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  README.md  configure.ac  hello.c  hello_lib.c  hello_lib.h
